# Human-GEM

./: .gitignore  README.md  citation.cff  pyproject.toml
.github/workflows/: commentMacaw.md  gene-essentiality.yml
code/: README.md  updateAnimalGEM.m
code/DepMapGeneEss/: PrepDepMapData.m
code/GPRs/: updateGrRules.m
code/examples/: run_human_gem.py
code/io/: increaseHumanGEMVersion.m  readYAMLmodel_HumanGEM.m
code/modelCuration/: GlycolysisCuration.m  addAAnewRxn20230518.m  addRxnACOD1_20221102.m  changeCompAbbrevs.m  removeDuplicateRxns_issue345.m
code/test/: testMetabolicTasks.m  testYamlConversion.m
data/deprecatedIdentifiers/: deprecatedMetabolites.tsv  deprecatedReactions.tsv
data/metabolicTasks/: metabolicTasks_Full.txt
data/testResults/: README.md  gene-essential.csv  macaw_results.csv  macaw_summary.md
docs/: introduction.md  run_human_gem_conditions.md
model/: Human-GEM.mat  Human-GEM.txt  Human-GEM.xlsx  dependencies.txt  genes.tsv  metabolites.tsv  reactions.tsv
src/utils/: __init__.py  path.py
