[project]
name = "human-gem"
version = "0.0.0"
description = "Python environment for working with the Human-GEM metabolic model"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "cobra>=0.29,<1.0",
  "openpyxl>=3.1,<4.0",
  "pandas>=2.2,<3.0",
  "pyyaml>=6.0,<7.0",
  "requests>=2.32,<3.0",
]

[dependency-groups]
test = [
  "memote>=0.17,<1.0",
]
curation = [
  "mysql-connector-python>=9.0,<10.0",
  "pubchempy>=1.0,<2.0",
  "rdkit>=2024.9.6",
  "tqdm>=4.67,<5.0",
]

[tool.uv]
package = false
